# DRF

./: .coverage  .gitignore  coverage.txt  pyproject.toml
config/: settings.py  urls.py
htmlcov/: index.html
lms/: admin.py  models.py  paginators.py  serialisers.py  tests.py  urls.py  validotors.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py
users/: admin.py  models.py  permissions.py  serialisers.py  urls.py  views.py
users/fixtures/: groups.json  payments_fixture.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payment.py
