[project]
name = "drf"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Parkhanovich"}
]
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=1.20.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
develop = [
    "pillow (>=12.2.0,<13.0.0)",
    "django (>=6.0.4,<7.0.0)"
]
